Added notification code and job scheduler to DBI.Data

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -65,6 +65,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\app\ljankowski\product\12.1.0\client_2\odp.net\managed\x86\Oracle.ManagedDataAccessDTC.dll</HintPath>
     </Reference>
+    <Reference Include="PushSharp.Apple">
+      <HintPath>..\..\PushSharp\PushSharp.Apple\bin\Release\PushSharp.Apple.dll</HintPath>
+    </Reference>
+    <Reference Include="PushSharp.Core">
+      <HintPath>..\..\PushSharp\PushSharp.Apple\bin\Release\PushSharp.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -199,6 +205,8 @@
     <Compile Include="INVENTORY_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataFactory\Jobs\Jobs.cs" />
+    <Compile Include="DataFactory\Jobs\JobScheduler.cs" />
     <Compile Include="MBL_EMPLOYEE_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
@@ -354,6 +362,7 @@
       <DependentUpon>Oracle.edmx</DependentUpon>
       <LastGenOutput>Oracle.cs</LastGenOutput>
     </None>
+    <EmbeddedResource Include="DataFactory\Jobs\PushSharp.PushCert.Production.p12" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBI.Core\DBI.Core.csproj">
