--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -339,6 +339,9 @@
     <Compile Include="XXDBI_LABOR_HEADER_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="XXDBI_PAYROLL_AUDIT.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="XXDBI_PER_DIEM_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
