EV-15 #time 45m Various Updates to Daily Activity.
Foreman Name above signature image.
Rename Date to Date/Time for Weather
Rename Foreman License # to Business License where mentioned.

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -201,6 +201,7 @@
     <Compile Include="DataFactory\Security\Modules.cs" />
     <Compile Include="DataFactory\Security\Permissions.cs" />
     <Compile Include="DataFactory\Security\UserActivity.cs" />
+    <Compile Include="DataFactory\Security\UserOrganizations.cs" />
     <Compile Include="DataFactory\Security\UserPermissions.cs" />
     <Compile Include="DataFactory\StaticLists.cs" />
     <Compile Include="DataFactory\Security\UserInformation.cs" />
