EV-222 Added CROSSING_RAILROAD table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -115,6 +115,9 @@
     <Compile Include="CROSSING_INSPECTION.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="CROSSING_RAILROAD.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="CROSSING_RELATIONSHIP.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
