Updated security to use treegrid so we can display the hierarchy view

--- a/DBI.Web.EMS/Web.config
+++ b/DBI.Web.EMS/Web.config
@@ -59,6 +59,11 @@
     </handlers>
     <httpErrors errorMode="Detailed" />
     <asp scriptErrorSentToBrowser="true" />
+    <defaultDocument>
+      <files>
+        <add value="uxlogin.aspx" />
+      </files>
+    </defaultDocument>
   </system.webServer>
   <system.data>
     <DbProviderFactories>
