Adding an incident tab to view open and closed incidents, add incidents and close incidents

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -122,6 +122,7 @@
     <Content Include="Views\Modules\CrossingMaintenance\umAppDate.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umCrossingHome.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umDataEntryMain.aspx" />
+    <Content Include="Views\Modules\CrossingMaintenance\umIncident.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umIncidentReports.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umInspectionEntry.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umContactsTab.aspx" />
@@ -224,6 +225,13 @@
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umDataEntryMain.aspx.designer.cs">
       <DependentUpon>umDataEntryMain.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umIncident.aspx.cs">
+      <DependentUpon>umIncident.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umIncident.aspx.designer.cs">
+      <DependentUpon>umIncident.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umIncidentReports.aspx.cs">
       <DependentUpon>umIncidentReports.aspx</DependentUpon>
