--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -190,8 +190,10 @@
     <Compile Include="DataFactory\Employees\Employees.cs" />
     <Compile Include="DataFactory\Employees\WebEmployee.cs" />
     <Compile Include="DataFactory\Equipment\Equipment.cs" />
-    <Compile Include="DataFactory\Modules\Overhead\OverheadBudgetType.cs" />
-    <Compile Include="DataFactory\Organizations\Organizations.cs" />
+    <Compile Include="Oracle\GL\OVERHEAD_BUDGET_TYPE.cs" />
+    <Compile Include="Oracle\GL\Budgets.cs" />
+    <Compile Include="Oracle\GL\OVERHEAD_GL_ACCOUNT.cs" />
+    <Compile Include="Oracle\HR\Organizations.cs" />
     <Compile Include="DataFactory\Interface\Interface.cs" />
     <Compile Include="DataFactory\GMS\Data.cs" />
     <Compile Include="DataFactory\Inventory\Inventory.cs" />
