IEMS-35 had to add back tables as well as make requested change of adding column to Daily Activity Inventory table

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -190,33 +190,6 @@
     <Compile Include="DataFactory\Employees\Employees.cs" />
     <Compile Include="DataFactory\Employees\WebEmployee.cs" />
     <Compile Include="DataFactory\Equipment\Equipment.cs" />
-    <Compile Include="Oracle\GL\OVERHEAD_BUDGET_TYPE.cs" />
-    <Compile Include="Oracle\GL\Budgets.cs" />
-    <Compile Include="Oracle\GL\OVERHEAD_GL_ACCOUNT.cs" />
-    <Compile Include="Oracle\HR\Organizations.cs" />
-    <Compile Include="DataFactory\Interface\Interface.cs" />
-    <Compile Include="DataFactory\GMS\Data.cs" />
-    <Compile Include="DataFactory\Inventory\Inventory.cs" />
-    <Compile Include="DataFactory\Messages\Resource.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource.resx</DependentUpon>
-    </Compile>
-    <Compile Include="DataFactory\Notifications\Notifications.cs" />
-    <Compile Include="DataFactory\Projects\WebProjects.cs" />
-    <Compile Include="DataFactory\Projects\Projects.cs" />
-    <Compile Include="DataFactory\Security\Activity.cs" />
-    <Compile Include="DataFactory\Security\Logger.cs" />
-    <Compile Include="DataFactory\Security\MenuItems.cs" />
-    <Compile Include="DataFactory\Security\Modules.cs" />
-    <Compile Include="DataFactory\Security\Permissions.cs" />
-    <Compile Include="DataFactory\Security\UserActivity.cs" />
-    <Compile Include="DataFactory\Security\UserOrganizations.cs" />
-    <Compile Include="DataFactory\Security\UserPermissions.cs" />
-    <Compile Include="DataFactory\StaticLists.cs" />
-    <Compile Include="DataFactory\Security\UserInformation.cs" />
-    <Compile Include="DataFactory\Utilities\GenericData.cs" />
-    <Compile Include="DataFactory\Equipment\WebEquipment.cs" />
     <Compile Include="EMPLOYEES_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
@@ -230,6 +203,9 @@
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
     <Compile Include="INVENTORY_V.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="JOB_COST_CLASSES.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
     <Compile Include="JOB_TITLE_V.cs">
@@ -259,6 +235,33 @@
     <Compile Include="MTL_TRANSACTION_INT_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="Oracle\GL\OVERHEAD_BUDGET_TYPE.cs" />
+    <Compile Include="Oracle\GL\Budgets.cs" />
+    <Compile Include="Oracle\GL\OVERHEAD_GL_ACCOUNT.cs" />
+    <Compile Include="Oracle\HR\Organizations.cs" />
+    <Compile Include="DataFactory\Interface\Interface.cs" />
+    <Compile Include="DataFactory\GMS\Data.cs" />
+    <Compile Include="DataFactory\Inventory\Inventory.cs" />
+    <Compile Include="DataFactory\Messages\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="DataFactory\Notifications\Notifications.cs" />
+    <Compile Include="DataFactory\Projects\WebProjects.cs" />
+    <Compile Include="DataFactory\Projects\Projects.cs" />
+    <Compile Include="DataFactory\Security\Activity.cs" />
+    <Compile Include="DataFactory\Security\Logger.cs" />
+    <Compile Include="DataFactory\Security\MenuItems.cs" />
+    <Compile Include="DataFactory\Security\Modules.cs" />
+    <Compile Include="DataFactory\Security\Permissions.cs" />
+    <Compile Include="DataFactory\Security\UserActivity.cs" />
+    <Compile Include="DataFactory\Security\UserOrganizations.cs" />
+    <Compile Include="DataFactory\Security\UserPermissions.cs" />
+    <Compile Include="DataFactory\StaticLists.cs" />
+    <Compile Include="DataFactory\Security\UserInformation.cs" />
+    <Compile Include="DataFactory\Utilities\GenericData.cs" />
+    <Compile Include="DataFactory\Equipment\WebEquipment.cs" />
     <Compile Include="Oracle.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
